libs/extractor/tests/snapshots/all_tests__styled-11.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {styled} from '@devup-ui/core'\n        const StyledDiv = styled.aside<{ test: string }>({ bg: \"red\" })\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nconst StyledDiv = ({ style, className, ...rest }) => <aside {...rest} className={[\"a-a\", className].filter(Boolean).join(\" \")} style={style} />;\n",
}
